--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "deploy": "npx hardhat run scripts/deploy.js --network goerli", 
+    "testLocally": "npx hardhat test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.12.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7"
   }
 }
